<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_24"
        android:paddingRight="@dimen/dp_15"
        android:text="@string/share_title"
        android:textColor="@color/setting_text"
        android:textSize="@dimen/textsize_20" />


    <LinearLayout
        android:id="@+id/group_screen_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_action_bg"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_24"
        android:paddingTop="@dimen/dp_12"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_screen"
            android:textColor="@color/setting_text"
            android:textSize="@dimen/textsize_16" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_screen_info"
            android:textColor="@color/version_text"
            android:textSize="@dimen/textsize_12" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_picture_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_action_last_bg"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_24"
        android:paddingTop="@dimen/dp_12"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_12">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_picture"
            android:textColor="@color/setting_text"
            android:textSize="@dimen/textsize_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_picture_info"
            android:textColor="@color/version_text"
            android:textSize="@dimen/textsize_12" />

    </LinearLayout>
</LinearLayout>