<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/Themacolor"
        android:theme="?attr/actionBarTheme" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20dp"
        android:lineSpacingExtra="40px"
        android:text="@string/description"/>
    <RadioGroup
        android:id="@+id/rdgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/rbtn_pro"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/button_clicked"
            android:buttonTint="@color/Blue"
            android:checked="true"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/signup_pro" />

        <RadioButton
            android:id="@+id/rbtn_stu"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_clicked"
            android:padding="10dp"
            android:text="@string/signup_stu" />
    </RadioGroup>
    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/signup_policy"
        android:buttonTint="@color/Blue"
        android:textColor="#000000"
        android:textSize="10dp" />
    <Button
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:onClick="signup"
        android:layout_height="60dp"
        android:background="@drawable/purple_round_border"
        android:textStyle="bold"
        android:text="회원가입"
        android:textColor="@color/Blue" />

</LinearLayout>