<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_24"
        android:paddingRight="@dimen/dp_15"
        android:text="@string/renderer_option"
        android:textColor="@color/setting_text"
        android:textSize="@dimen/textsize_20" />

    <LinearLayout
        android:id="@+id/llZoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_action_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_24"
        android:paddingTop="@dimen/dp_12"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_12">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvZoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/renderer_option_zoom"
                android:textColor="@drawable/render_text_color"
                android:textSize="@dimen/textsize_16" />


            <TextView
                android:id="@+id/tvZoomInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/renderer_option_zoom_tips"
                android:textColor="@drawable/render_info_color"
                android:textSize="@dimen/textsize_12" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivZoom"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:src="@drawable/icon_item_selected" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOpengl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_action_last_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_24"
        android:paddingTop="@dimen/dp_12"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_12">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvOpengl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/renderer_option_opengl"
                android:textColor="@drawable/render_text_color"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tvOpenglInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/renderer_option_opengl_tips"
                android:textColor="@drawable/render_info_color"
                android:textSize="@dimen/textsize_12" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivOpengl"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:src="@drawable/icon_item_selected"
            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>