<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_head" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_button_selector"
        android:gravity="center_vertical"
        android:onClick="onClickSendLog"
        android:padding="@dimen/dp_20">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_send_email"
                android:textColor="@color/setting_text"
                android:textSize="@dimen/textsize_15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/setting_email_notice"
                android:textColor="@color/version_text"
                android:textSize="@dimen/textsize_12" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:layout_marginLeft="@dimen/dp_14"
            android:src="@drawable/icon_arrow_left" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_63"
        android:background="@drawable/item_button_selector"
        android:gravity="center_vertical"
        android:onClick="onClickClearLog"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_clean_logs"
            android:textColor="@color/setting_text"
            android:textSize="@dimen/textsize_15" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow_left" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/text_version"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:textColor="@color/version_text"
        android:textSize="@dimen/textsize_13" />
</LinearLayout>
