<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/launch_top_bg">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_68" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_20"
                    android:layout_gravity="bottom"
                    android:background="@drawable/launch_page_oval" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="left"
                        android:layout_margin="@dimen/dp_16"
                        android:onClick="showDrawer"
                        android:src="@drawable/icon_setting" />

                    <LinearLayout
                        android:id="@+id/llDots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal" />
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp_37">

                <Button
                    style="@style/ZMButton"
                    android:layout_width="match_parent"
                    android:onClick="gotoCreate"
                    android:text="@string/create" />

                <Button
                    style="@style/ZMButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_40"
                    android:onClick="gotoJoin"
                    android:background="@drawable/blue_light_join_radius_bg"
                    android:textColor="@drawable/join_text_color"
                    android:text="@string/join" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:text="@string/launch_setting_title"
                android:textColor="@color/setting_text"
                android:textSize="@dimen/textsize_20" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:background="@drawable/item_button_selector"
                android:gravity="center_vertical"
                android:onClick="gotoSetting"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_32"
                    android:src="@drawable/icon_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launch_setting_settings"
                    android:textColor="@color/setting_text"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginLeft="@dimen/dp_16"
                android:background="@color/line_color" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:background="@drawable/item_button_selector"
                android:gravity="center_vertical"
                android:onClick="gotoDocument"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_32"
                    android:src="@drawable/icon_feedback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launch_setting_feedback"
                    android:textColor="@color/setting_text"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginLeft="@dimen/dp_16"
                android:background="@color/line_color" />


            <TextView
                android:id="@+id/text_version"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_weight="1"
                android:text=""
                android:gravity="center_horizontal|bottom"
                android:textColor="@color/version_text"
                android:textSize="@dimen/textsize_13" />
        </LinearLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>